--- a/estilos/style.css
+++ b/estilos/style.css
@@ -37,9 +37,17 @@ body {
 }
 
 /* Custom Navbar */
+nav {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+  height: 12vh;
+}
+
 .navbar-custom {
   background: var(--primary-color) !important;
-  padding: 0.75rem 0;
+  padding: 1rem 0;
   box-shadow: 0 2px 15px rgba(0, 0, 0, 0.1);
   transition: all 0.3s ease;
 }
@@ -90,19 +98,11 @@ body {
   visibility: visible !important;
 }
 
-.logo-circle {
-  width: 75px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  flex-shrink: 0;
-  overflow: hidden;
-}
 
 .logo-img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
+  margin: 20px;
+  width: auto;
+  height: 70px;
 }
 
 @media (max-width: 991px) {
@@ -716,6 +716,7 @@ body {
 
 /* Contact Section */
 .contact-section {
+  
   background: var(--primary-color);
   color: var(--white);
 }
@@ -733,6 +734,7 @@ body {
 
 .contact-item {
   display: flex;
+  justify-content: space-between;
   align-items: center;
   margin-bottom: 1.5rem;
   font-size: 1.125rem;
